add jvm vector incubator module flag